syntax="proto3";

option csharp_namespace = "HappyCoding.ProtobufSerialization.CompatibleModificationsTests.RemovedEnumMember";

message MyTestMessageOriginal 
{
  string firstName = 1;
  string lastName = 2;
  int32 age = 3;
  repeated string emails = 4;
  PreferredWayOfCommunication preferredWayOfCommunication = 5;
}

enum PreferredWayOfCommunication {
  UNSPECIFIED = 0;
  EMAIL = 1;
  PHONE = 2;
  POST = 3;
}