syntax="proto3";

option csharp_namespace = "HappyCoding.ProtobufSerialization.CompatibleModificationsTests.RemovedEnumMember";

message MyTestMessageUpdated
{
  string firstName = 1;
  string lastName = 2;
  int32 age = 3;
  repeated string emails = 4;
  PreferredWayOfCommunicationUpdated preferredWayOfCommunication = 5;
}

enum PreferredWayOfCommunicationUpdated {
  UNSPECIFIED = 0;
  PHONE = 2;
  POST = 3;
}